--- a/Tests/Tester.WPF/MainWindow.xaml
+++ b/Tests/Tester.WPF/MainWindow.xaml
@@ -4,25 +4,45 @@
         xmlns:modern="http://modernwpf"
 		Title="TWAIN Tester" Height="600" Width="900" ResizeMode="CanResizeWithGrip"
         Style="{StaticResource AppWindow}">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="auto" />
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="auto" />
-			<ColumnDefinition Width="*" />
-		</Grid.ColumnDefinitions>
-		<StackPanel Orientation="Horizontal" Grid.ColumnSpan="2">
-			<Button Content="Test Acquire" Click="Button_Click_1"></Button>
-		</StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-		<ListBox x:Name="CapList" Grid.Row="1" BorderThickness="0" ScrollViewer.CanContentScroll="False"></ListBox>
+        <Label Content="Sources"></Label>
+        <ListBox x:Name="SrcList" Grid.Row="1" BorderThickness="0 1 1 0" ScrollViewer.CanContentScroll="False" Width="150"
+                 SelectionChanged="SrcList_SelectionChanged">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ProductName}" TextWrapping="Wrap"></TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
-		<modern:AnimatedScrollViewer Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Auto"
+        <Label Content="Caps" Grid.Column="1"></Label>
+        <ListBox x:Name="CapList" Grid.Row="1" Grid.Column="1" BorderThickness="0 1 1 0" ScrollViewer.CanContentScroll="False" MinWidth="100"
+                 SelectionChanged="CapList_SelectionChanged"></ListBox>
+
+        <Label Content="Cap values" Grid.Column="2"></Label>
+        <ListBox x:Name="CapDetailList" Grid.Row="1" Grid.Column="2" BorderThickness="0 1 1 0" ScrollViewer.CanContentScroll="False" MinWidth="100"
+                 SelectionChanged="CapDetailList_SelectionChanged"></ListBox>
+
+        <StackPanel Orientation="Horizontal" Grid.Column="3" >
+            <Label Content="State:"></Label>
+            <TextBlock Text="{Binding State}"></TextBlock>
+            <Button Content="Test acquire" Click="Button_Click_1" Margin="4 0"></Button>
+        </StackPanel>
+        <modern:AnimatedScrollViewer Grid.Row="1" Grid.Column="3" VerticalScrollBarVisibility="Auto"
 				HorizontalScrollBarVisibility="Auto">
-			<Image x:Name="ImageDisplay" Stretch="Uniform" MaxWidth="1000"
+            <Image x:Name="ImageDisplay" Stretch="Uniform" MaxWidth="1000"
 					RenderOptions.BitmapScalingMode="HighQuality"></Image>
-		</modern:AnimatedScrollViewer>
-	</Grid>
+        </modern:AnimatedScrollViewer>
+    </Grid>
 </Window>
