--- a/Tests/Tester.WPF/App.xaml
+++ b/Tests/Tester.WPF/App.xaml
@@ -14,6 +14,24 @@
                 
                 <ResourceDictionary>
                     <Style x:Key="AppWindow" TargetType="Window" BasedOn="{StaticResource ModernWindow}"/>
+                    <Style x:Key="AppListBoxItem" TargetType="ListBoxItem" BasedOn="{StaticResource ModernListBoxItem}">
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="{DynamicResource ModernBackground2}"/>
+                            </Trigger>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="{DynamicResource ModernBackground2}"/>
+                                <Setter Property="Foreground" Value="{DynamicResource ModernForeground}"/>
+                                <Setter Property="BorderBrush" Value="{DynamicResource ModernAccent}"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                    <Style x:Key="AppListBox" TargetType="ListBox" BasedOn="{StaticResource ModernListBox}">
+                        <Setter Property="ItemContainerStyle" Value="{StaticResource AppListBoxItem}"/>
+                        <Setter Property="BorderThickness" Value="0 1 1 0"/>
+                        <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
+                    </Style>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
