Fixed creating/opening/closing twainsession multiple times in an app not working.

--- a/Tests/Tester.WPF/App.xaml
+++ b/Tests/Tester.WPF/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Tester.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Dummy.xaml">
 	<Application.Resources>
         <ResourceDictionary>
             <!-- Dummy Style, anything you won't use goes -->
