--- a/Tests/Tester.WPF/MainWindow.xaml
+++ b/Tests/Tester.WPF/MainWindow.xaml
@@ -2,7 +2,7 @@
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:modern="http://modernwpf"
-		Title="TWAIN DS Tester" Height="600" Width="900" ResizeMode="CanResizeWithGrip"
+		Title="TWAIN Data Source Tester" Height="600" Width="900" ResizeMode="CanResizeWithGrip"
         Style="{StaticResource AppWindow}">
     <Grid>
         <Grid.RowDefinitions>
