--- a/Tests/Tester.WPF/MainWindow.xaml
+++ b/Tests/Tester.WPF/MainWindow.xaml
@@ -50,8 +50,14 @@
         <Label Content="Cap values" Grid.Column="2"></Label>
         <ListBox x:Name="CapDetailList" Grid.Row="1" Grid.Column="2" MinWidth="100"
                  SelectionChanged="CapDetailList_SelectionChanged"
-                 ScrollViewer.CanContentScroll="True"
-                 Style="{StaticResource AppListBox}"></ListBox>
+                 ScrollViewer.CanContentScroll="True" 
+                 Style="{StaticResource AppListBox}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"></TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <StackPanel Orientation="Horizontal" Grid.Column="3" >
             <Label Content="State:"></Label>
