--- a/Tests/Tester.WPF/MainWindow.xaml
+++ b/Tests/Tester.WPF/MainWindow.xaml
@@ -2,8 +2,17 @@
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:modern="http://modernwpf"
-		Title="TWAIN Data Source Tester" Height="600" Width="900" ResizeMode="CanResizeWithGrip"
+        xmlns:proj="clr-namespace:Tester.WPF"
+		Title="{Binding AppTitle}" 
+        Height="600" Width="900" ResizeMode="CanResizeWithGrip"
+        x:Name="theWindow"
         Style="{StaticResource AppWindow}">
+    <Window.Resources>
+        <proj:TwainVM x:Key="vm"></proj:TwainVM>
+    </Window.Resources>
+    <Window.DataContext>
+        <StaticResource ResourceKey="vm"></StaticResource>
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -19,7 +28,8 @@
 
         <Label Content="Sources"></Label>
         <ListBox x:Name="SrcList" Grid.Row="1" Grid.RowSpan="2" Width="150"
-                 SelectionChanged="SrcList_SelectionChanged"
+                 ItemsSource="{Binding DataSources}"
+                 SelectedItem="{Binding SelectedSource}"
                  Style="{StaticResource AppListBox}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -35,11 +45,11 @@
         </ListBox>
 
         <Label Content="Caps" Grid.Column="1"></Label>
-        <TextBox Text="{Binding CapFilter, UpdateSourceTrigger=PropertyChanged}" DataContext="{Binding ElementName=SrcList, Path=SelectedItem}"
+        <TextBox Text="{Binding CapFilter, UpdateSourceTrigger=PropertyChanged}" DataContext="{Binding SelectedSource}"
                  Grid.Column="1" Grid.Row="1"
                  modern:TextBoxUI.WatermarkText="Find cap name"></TextBox>
         <ListBox x:Name="CapList" Grid.Row="2" Grid.Column="1" Width="150"
-                 DataContext="{Binding ElementName=SrcList, Path=SelectedItem}"
+                 DataContext="{Binding SelectedSource}"
                  ItemsSource="{Binding Caps}"
                  SelectionChanged="CapList_SelectionChanged"
                  Style="{StaticResource AppListBox}">
@@ -51,7 +61,8 @@
                                    FontStyle="Italic"/>
                     </StackPanel>
                 </DataTemplate>
-            </ListBox.ItemTemplate></ListBox>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <Label Content="Cap values" Grid.Column="2"></Label>
         <ListBox x:Name="CapDetailList" Grid.Row="1" Grid.RowSpan="2" Grid.Column="2" MinWidth="100"
@@ -68,13 +79,34 @@
         <StackPanel Orientation="Horizontal" Grid.Column="3" >
             <Label Content="State:"></Label>
             <TextBlock Text="{Binding State}"></TextBlock>
-            <Button Content="Test acquire" Click="Button_Click_1" Margin="4 0"></Button>
+            <Button Content="_Driver settings" Command="{Binding ShowDriverCommand}"></Button>
+            <Button Content="_Start capture" Command="{Binding CaptureCommand}"></Button>
+            <Slider Maximum="{Binding MaxThumbnailSize}" Minimum="{Binding MinThumbnailSize}" 
+                    Value="{Binding ThumbnailSize}" Width="100" LargeChange="20" SmallChange="10"
+                    VerticalAlignment="Center"
+                    ToolTip="{Binding ThumbnailSize}"></Slider>
+            <TextBlock Text="{Binding CapturedImages.Count, StringFormat='{}{0} pages'}"></TextBlock>
+            <Button Content="_Clear pages" Command="{Binding ClearCommand}"></Button>
         </StackPanel>
-        <modern:AnimatedScrollViewer Grid.Row="1" Grid.RowSpan="2" Grid.Column="3" VerticalScrollBarVisibility="Auto"
-				HorizontalScrollBarVisibility="Auto">
-            <Image Stretch="Uniform" MaxWidth="1000"
-                   RenderOptions.BitmapScalingMode="HighQuality"
-                   Source="{Binding Image}"></Image>
-        </modern:AnimatedScrollViewer>
+
+        <ListBox Grid.Row="1" Grid.RowSpan="2" Grid.Column="3"
+                 ItemsSource="{Binding CapturedImages}">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel ScrollViewer.HorizontalScrollBarVisibility="Disabled"></WrapPanel>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border Padding="4">
+                        <Image Stretch="Uniform" 
+                               RenderOptions.BitmapScalingMode="HighQuality"
+                               Width="{Binding ElementName=theWindow, Path=DataContext.ThumbnailSize}"
+                               Height="{Binding ElementName=theWindow, Path=DataContext.ThumbnailSize}"
+                               Source="{Binding}"></Image>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
