--- a/src/NTwain/DSM/DSMGenerator.tt
+++ b/src/NTwain/DSM/DSMGenerator.tt
@@ -1,3 +1,20 @@
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
+<#@ assembly name="System.Core" #>
+<#@ import namespace="System.IO" #>
+<#@ import namespace="System.Linq" #>
+<#@ import namespace="System.Text" #>
+<#@ import namespace="System.Collections.Generic" #>
+<#@ output extension="dummy" #>
+<#
+List<(string, string, string)> className_dllPath_identityStruct = new() {
+ ("OSXLegacyDSM", "/System/Library/Frameworks/framework/TWAIN", "TW_IDENTITY_MACOSX"),
+ ("OSXNewDSM", "/Library/Frameworks/TWAINDSM.framework/TWAINDSM", "TW_IDENTITY_MACOSX"),
+ ("WinLegacyDSM", "twain_32.dll", "TW_IDENTITY_LEGACY"),
+ ("WinNewDSM", "twaindsm.dll", "TW_IDENTITY_LEGACY")
+};
+
+foreach(var file in className_dllPath_identityStruct) {
+#>
 using NTwain.Data;
 using System;
 using System.Runtime.InteropServices;
@@ -5,168 +22,180 @@ using System.Runtime.InteropServices;
 namespace NTwain.DSM
 {
   /// <summary>
-  /// Low-level pinvoke methods using twain_32.dll.
+  /// Low-level pinvoke methods using <#= file.Item2 #>.
   /// </summary>
-  public static class WinLegacyDSM
+  public static class <#= file.Item1 #>
   {
-    const string DsmName = "twain_32.dll";
+    const string DsmName = "<#= file.Item2 #>";
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, IntPtr dest,
+        ref <#= file.Item3 #> origin, IntPtr dest,
         DG dg, DAT dat, MSG msg, ref IntPtr hwnd
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, IntPtr dest,
+        ref <#= file.Item3 #> origin, IntPtr dest,
         DG dg, DAT dat, MSG msg, IntPtr zero
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, IntPtr zero
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref IntPtr mem
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, IntPtr dest,
-        DG dg, DAT dat, MSG msg, ref TW_IDENTITY_LEGACY twidentity
+        ref <#= file.Item3 #> origin, IntPtr dest,
+        DG dg, DAT dat, MSG msg, ref <#= file.Item3 #> twidentity
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_STATUS twstatus
     );
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, IntPtr dest,
+        ref <#= file.Item3 #> origin, IntPtr dest,
         DG dg, DAT dat, MSG msg, ref TW_STATUS twstatus
     );
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, IntPtr dest,
+        ref <#= file.Item3 #> origin, IntPtr dest,
         DG dg, DAT dat, MSG msg, ref TW_STATUSUTF8 twstatusutf8
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, IntPtr dest,
+        ref <#= file.Item3 #> origin, IntPtr dest,
         DG dg, DAT dat, MSG msg, ref TW_ENTRYPOINT twentrypoint
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_DEVICEEVENT twdeviceevent
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_CUSTOMDSDATA twcustomedsdata
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_CALLBACK twcallback
     );
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_CALLBACK2 twcallback
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref DG xfergroup
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_USERINTERFACE userinterface
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_EVENT evt
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_PENDINGXFERS pendingxfers
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_SETUPMEMXFER memxfer
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_SETUPFILEXFER filexfer
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_PASSTHRU passthru
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_FILESYSTEM filesystem
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_CAPABILITY cap
     );
 
     [DllImport(DsmName, CharSet = CharSet.Ansi)]
     public static extern ushort DSM_Entry
     (
-        ref TW_IDENTITY_LEGACY origin, ref TW_IDENTITY_LEGACY dest,
+        ref <#= file.Item3 #> origin, ref <#= file.Item3 #> dest,
         DG dg, DAT dat, MSG msg, ref TW_AUDIOINFO auioinfo
     );
   }
 }
+<#
+  SaveOutput(file.Item1 + ".cs");
+}#>
+
+<#+
+private void SaveOutput(string outputFileName) {
+  string templateDirectory = Path.GetDirectoryName(Host.TemplateFile);
+  string outputFilePath = Path.Combine(templateDirectory, outputFileName);
+  File.WriteAllText(outputFilePath, this.GenerationEnvironment.ToString()); 
+  this.GenerationEnvironment.Clear();
+}
+#>
