Added twaindirect call.

--- a/src/NTwain/DSM/DSMGenerator.tt
+++ b/src/NTwain/DSM/DSMGenerator.tt
@@ -144,6 +144,13 @@ namespace NTwain.DSM
     public static extern ushort DSM_Entry
     (
         ref <#= file.identityClass #> origin, ref <#= file.identityClass #> dest,
+        DG dg, DAT dat, MSG msg, ref TW_TWAINDIRECT task
+    );
+
+    [DllImport(DsmName, CharSet = CharSet.Ansi)]
+    public static extern ushort DSM_Entry
+    (
+        ref <#= file.identityClass #> origin, ref <#= file.identityClass #> dest,
         DG dg, DAT dat, MSG msg, ref TW_PENDINGXFERS pendingxfers
     );
 
