--- a/src/NTwain/DSM/DSMGenerator.tt
+++ b/src/NTwain/DSM/DSMGenerator.tt
@@ -6,14 +6,14 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension="dummy" #>
 <#
-List<(string className, string dllPath, string identityClass)> outputs = new() {
- ("OSXLegacyDSM", "/System/Library/Frameworks/framework/TWAIN", "TW_IDENTITY_MACOSX"),
- ("OSXNewDSM", "/Library/Frameworks/TWAINDSM.framework/TWAINDSM", "TW_IDENTITY_MACOSX"),
- ("LinuxDSM", "/usr/local/lib/libtwaindsm.so", "TW_IDENTITY_LEGACY"),
- ("Linux64DSM", "/usr/local/lib64/libtwaindsm.so", "TW_IDENTITY_LEGACY"),
- ("LinuxBotched64DSM", "/usr/local/lib/libtwaindsm.so.2.3.2", "TW_IDENTITY"),
- ("WinLegacyDSM", "twain_32.dll", "TW_IDENTITY_LEGACY"),
- ("WinNewDSM", "twaindsm.dll", "TW_IDENTITY_LEGACY")
+List<(string className, string dllPath, string identityClass, string addlInfo)> outputs = new() {
+ ("OSXLegacyDSM", "/System/Library/Frameworks/framework/TWAIN", "TW_IDENTITY_MACOSX", ""),
+ ("OSXNewDSM", "/Library/Frameworks/TWAINDSM.framework/TWAINDSM", "TW_IDENTITY_MACOSX", ""),
+ ("LinuxDSM", "/usr/local/lib/libtwaindsm.so", "TW_IDENTITY_LEGACY", ""),
+ ("Linux64DSM", "/usr/local/lib64/libtwaindsm.so", "TW_IDENTITY_LEGACY", "For versions since 2.4."),
+ ("LinuxBotched64DSM", "/usr/local/lib/libtwaindsm.so.2.3.2", "TW_IDENTITY", "For versions before 2.4."),
+ ("WinLegacyDSM", "twain_32.dll", "TW_IDENTITY_LEGACY", "For 32bit only."),
+ ("WinNewDSM", "twaindsm.dll", "TW_IDENTITY_LEGACY", "")
 };
 
 foreach(var file in outputs) {
@@ -25,7 +25,7 @@ using System.Runtime.InteropServices;
 namespace NTwain.DSM
 {
   /// <summary>
-  /// Low-level pinvoke methods using <#= file.dllPath #>.
+  /// Low-level pinvoke methods using <#= file.dllPath #>. <#= file.addlInfo #>
   /// </summary>
   public static class <#= file.className #>
   {
