--- a/src/NTwain/DSM/DSMGenerator.tt
+++ b/src/NTwain/DSM/DSMGenerator.tt
@@ -172,6 +172,13 @@ namespace NTwain.DSM
     public static extern TWRC DSM_Entry
     (
         ref <#= file.identityClass #> origin, ref <#= file.identityClass #> dest,
+        DG dg, DAT dat, MSG msg, ref TW_METRICS metrics
+    );
+
+    [DllImport(DsmName, CharSet = CharSet.Ansi)]
+    public static extern TWRC DSM_Entry
+    (
+        ref <#= file.identityClass #> origin, ref <#= file.identityClass #> dest,
         DG dg, DAT dat, MSG msg, ref TW_PASSTHRU passthru
     );
 
